<resources>
    <string name="app_name">MiniProjet</string>
    <string name="btn_ajout">Ajouter un déchet</string>
    <string name="btn_retour">Retour</string>
    <string name="tv_dechet">Déchet :</string>
    <string name="tv_materiaux">Matière :</string>
    <string name="tv_tps">Durée de vie :</string>
    <string name="tv_description">Impacte environemental :</string>
    <string name="tv_biodegradable">Biodégradable :</string>
    <string name="txt_nom">Nom déchet </string>
    <string name="btn_annuler">Annuler</string>
    <string name="btn_add">Ajouter</string>
    <string name="lb_matiere">Matiere principale</string>
    <string name="lb_temps">Temps décomposition</string>
    <string name="lb_description">Description</string>
    <string name="rd_oui">Biodégradable</string>
    <string name="rd_non">Non biodégradable</string>
    <string name="oui">Biodégradable : Oui</string>
    <string name="non">Biodégradable : Non</string>
    <string name="btn_menu_quitter">Quitter</string>
    <string name="btn_menu_retour">Retour</string>
    <string name="txt_identifier">Identifiez-vous</string>
    <string name="edit_txt_nom">Nom créateur</string>
    <string name="edit_txt_mail">Adresse mail créateur</string>
    <string name="btn_annl">Annuler</string>
    <string name="btn_valider">Valider</string>
    <string name="quit_app">Retour</string>
    <string name="ajout">Ajouter déchet</string>
</resources>