<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_annl"
        android:layout_width="121dp"
        android:layout_height="65dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="88dp"
        android:text="@string/btn_annl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_valider"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_identifier"
        android:layout_width="228dp"
        android:layout_height="58dp"
        android:layout_marginTop="78dp"
        android:layout_marginBottom="632dp"
        android:text="@string/txt_identifier"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_txt_nom"
        android:layout_width="358dp"
        android:layout_height="58dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="21dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edit_txt_nom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_identifier" />

    <Button
        android:id="@+id/btn_valider"
        android:layout_width="121dp"
        android:layout_height="65dp"
        android:layout_marginStart="59dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="88dp"
        android:text="@string/btn_valider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_annl" />

    <EditText
        android:id="@+id/edit_txt_mail"
        android:layout_width="358dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="196dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/edit_txt_mail"
        app:layout_constraintBottom_toTopOf="@+id/btn_annl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_txt_nom" />

</androidx.constraintlayout.widget.ConstraintLayout>