<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/txt_nom"
        android:layout_width="267dp"
        android:layout_height="49dp"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_nom"
        app:layout_constraintBottom_toTopOf="@+id/spin_matiere"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spin_matiere"
        android:layout_width="220dp"
        android:layout_height="56dp"
        android:layout_marginStart="39dp"
        android:layout_marginBottom="39dp"
        app:layout_constraintBottom_toTopOf="@+id/txtnb_temps"
        app:layout_constraintStart_toEndOf="@+id/lb_matiere" />

    <EditText
        android:id="@+id/txtnb_temps"
        android:layout_width="220dp"
        android:layout_height="51dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="56dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/rd_degradable"
        app:layout_constraintStart_toEndOf="@+id/lb_temps" />

    <EditText
        android:id="@+id/txt_description"
        android:layout_width="279dp"
        android:layout_height="103dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="99dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/btn_annuler"
        app:layout_constraintStart_toEndOf="@+id/lb_description" />

    <RadioGroup
        android:id="@+id/rd_degradable"
        android:layout_width="375dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="78dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_description"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_annuler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="40dp"
        android:text="@string/btn_annuler"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginBottom="40dp"
        android:text="@string/btn_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_annuler" />

    <TextView
        android:id="@+id/lb_matiere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="70dp"
        android:labelFor="@id/spin_matiere"
        android:text="@string/lb_matiere"
        app:layout_constraintBottom_toTopOf="@+id/lb_temps"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lb_temps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="64dp"
        android:labelFor="@id/txtnb_temps"
        android:text="@string/lb_temps"
        app:layout_constraintBottom_toTopOf="@+id/rd_degradable"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lb_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="126dp"
        android:labelFor="@id/txt_description"
        android:text="@string/lb_description"
        app:layout_constraintBottom_toTopOf="@+id/btn_annuler"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>